# hurl

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: on-pull-request.yml  on-push.yml  on-release.yml  publish.yml  test.yml
assets/: demo-library.json
src/: app.rs  cli.rs  config.rs  demo.rs  events.rs  highlight.rs  lib.rs  main.rs  model.rs  network.rs  storage.rs  sync.rs  ui.rs
