[package]
name = "hurl"
version = "0.1.0"
edition = "2024"
description = "A terminal UI API client for humans"
homepage = "https://github.com/robbiemccorkell/hurl"
repository = "https://github.com/robbiemccorkell/hurl"
readme = "README.md"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
directories = "6.0"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
tui-textarea = "0.7"
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
httpmock = "0.8"
tempfile = "3.20"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
