[package]
name = "hurl"
version = "0.3.1"
edition = "2024"
description = "A terminal UI API client for humans"
homepage = "https://github.com/robbiemccorkell/hurl"
repository = "https://github.com/robbiemccorkell/hurl"
readme = "README.md"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
crossterm = "0.28"
directories = "6.0"
futures-lite = "2.6"
isahc = "1.8"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "vendored"] }
rand = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
tui-textarea = "0.7"
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }
webbrowser = "1.0"

[dev-dependencies]
httpmock = "0.8"
tempfile = "3.20"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
